# sol4creators.sol

./: Anchor.toml
my-nextjs-app/: .env  index.js  package-lock.json  package.json
my-nextjs-app/src/app/: app.js  layout.tsx  page.tsx
my-nextjs-app/src/components/: Dialog.tsx  NFTInteraction.js  connectwallet.tsx  modal.tsx
my-nextjs-app/src/context/: WalletContext.js
my-nextjs-app/src/lib/: utils.ts
my-nextjs-app/src/providers/: providers.tsx
my-nextjs-app/src/styled-system/css/: conditions.mjs
my-nextjs-app/src/styled-system/jsx/: is-valid-prop.mjs
my-nextjs-app/src/styled-system/tokens/: index.mjs  tokens.d.ts
my-nextjs-app/src/styled-system/types/: conditions.d.ts  index.d.ts  prop-type.d.ts
programs/my_solana_project/: Cargo.toml
programs/my_solana_project/src/: lib.rs
tests/: my_solana_project.ts
